--- a/public/css/gamepage.css
+++ b/public/css/gamepage.css
@@ -32,7 +32,7 @@ nav{
   background-color: transparent;
 }
 
-@media (max-width:900px){
+@media only screen and (max-width: 480px){
   .col{
     padding: 2%;
   }
