--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -41,3 +41,21 @@ form{
   background-color: transparent;
   color: blue;
 }
+
+@media only screen and (max-width: 480px) {
+  body {
+    background-size: 100%;
+  }
+  h1 {
+    font-size: 30px;
+    margin-left: 0;
+  }
+  form {
+    margin: 2% 5%;
+    padding: 5%;
+  }
+  #inputdiv {
+    margin-left: 10%;
+    width: 80%;
+  }
+}
