--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -1,4 +1,5 @@
 body{
+  background-image: url("../images/signin_signup_img/game2.png");
   background-repeat: no-repeat;
   background-size: 50%;
   background-color: #DCEDC2;
@@ -24,16 +25,15 @@ form{
 #ilogo{
   color: #EB455F;
 }
-#textlogo{
-  font-size: 25px;
-}
 #inputdiv{
   margin-left: 25%;
+  width: 50%;
 }
 .checkbox{
   margin-top: 2%;
 }
 #loginbtn{
+  width: 50%;
   margin-top: 2%;
 }
 #orsignup{
@@ -43,4 +43,32 @@ form{
   border: none;
   background-color: transparent;
   color: blue;
+}
+@media only screen and (max-width: 480px) {
+  body {
+    background-size: 15%;
+    opacity: 1;
+  }
+  h1 {
+    font-size: 20px;
+    margin-left: 0;
+  }
+  h2{
+    font-size: 15px;
+  }
+  p{
+    font-size: 10px;
+  }
+  form {
+    margin: 2% 5%;
+    padding: 5%;
+  }
+  input{
+    width: 20%;
+  }
+  #inputdiv {
+    font-size: 10px;
+    margin-left: 25%;
+    width: 50%;
+  }
 }
