--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -2,20 +2,20 @@
 <!-- custom css -->
 <link rel="stylesheet" href="css/signin.css">
 
-<body style="background-image: url('images/signin_signup_img/game2.png');">
+<body>
     <h1> Welcome to <i id="ilogo" class="fa-solid fa-dice fa-beat"></i> GameWeb</h1>
 
     <form  action="/signin" method="post" class="formdiv">
       <h2> Login/Register </h2>
-        <div class="input-group w-50" id="inputdiv">
+        <div class="input-group" id="inputdiv">
           <span class="input-group-text"> <img src="images/signin_signup_img/@.png" height="20" width="20"> </span>
           <input type="email" class="form-control" placeholder="Email" name="useremail" autocomplete="off">
         </div>
-        <div class="input-group w-50" id="inputdiv">
+        <div class="input-group" id="inputdiv">
           <span class="input-group-text"> <img src="images/signin_signup_img/k.png" height="20" width="20"> </span>
             <input type="password" class="form-control" placeholder="Password"  name="userpswd">
         </div>
-        <button id="loginbtn" class="btn btn-success w-50" type="submit" name="button" value="userlogin"> Login </button>
+        <button id="loginbtn" class="btn btn-success" type="submit" name="button" value="userlogin"> Login </button>
 
         <hr>
 
