--- a/public/css/query.css
+++ b/public/css/query.css
@@ -11,3 +11,26 @@ form{
   margin-right: 25%;
   padding: 2%;
 }
+@media only screen and (max-width: 480px) {
+  h1{
+    font-size: 30px;
+  }
+  h2{
+    font-size: 25px;
+  }
+  h3{
+    font-size: 20px;
+  }
+  p, li{
+    font-size: 15px;
+  }
+  form{
+    background-color: transparent;
+    border: 1px solid black;
+    margin-top: 2%;
+    margin-bottom: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 2%;
+  }
+}
