--- a/views/gamesejs/card.ejs
+++ b/views/gamesejs/card.ejs
@@ -11,9 +11,12 @@
 
       </div>
       <h3>Click any card to begin</h3>
-      <p><span id="seconds">00</span><span id="semicolon">:</span><span id="tens">00</span></p>
+      <p>
+        <span id="seconds">00</span><span id="semicolon">:</span><span id="tens">00</span>
+        <button class="refresh" type="submit" onclick="window.location.reload()" name="button"> Reset </button>
+      </p>
       <p id ="text"></p>
-    </div>
+  </div>
 
   <script type="text/javascript" src="gamesJS/card.js"></script>
 </body>
