--- a/views/gamesejs/flappybird.ejs
+++ b/views/gamesejs/flappybird.ejs
@@ -6,7 +6,7 @@
 <body>
   <div id="container">
     <div id="info_box">
-      <span id="info_title">flappy bird</span>
+      <span id="info_title"> Flappy Bird</span>
       <span id="info_instructions">how to play: click or press space to jump. don't hit the blocks!</span>
       <span id="info_start">start game</span>
       <span id="info_end" class="hidden"></span>
