--- a/views/gamesejs/puzzle.ejs
+++ b/views/gamesejs/puzzle.ejs
@@ -22,6 +22,7 @@
 
 
     <body>
+        <h2>ONLY FOR PCS/DESKTOP</h2>
         <img id="title" src="images/puzzle_img/doremon/logo.png">
         <div id="board">
         </div>
