--- a/views/gamesejs/snake.ejs
+++ b/views/gamesejs/snake.ejs
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="css/gamescss/snake.css">
 
 <body>
+  <h1>ONLY FOR PCS/DESKTOP</h1>
 
   <div class="container noselect">
 
