--- a/views/parallax.ejs
+++ b/views/parallax.ejs
@@ -54,7 +54,7 @@
       <section>
   <!-- ///////////////////////////parallax_1/////////////////////////// -->
         <div id="parallax_1" class="parallax">
-          <div class="startedp">
+          <div class="startedpp">
             <h1>We let the world play</h1>
             <h4>Because play is how we learn.That’s why we’re creating the ultimate online playground.Free and open to all.Wanna play?</h4>
             <button type="submit" class="btn btn-light btn-lg fa-beat" onclick="window.location.href='#div_1'">
