--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,9 +17,9 @@
               <div id="imagesection" class="col-md-4">
 
                 <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
-                alt="Avatar" class="img-fluid my-5" style="width: 80px;" />
+                alt="Avatar" class="img-fluid my-5 imgav" />
                 <input style="width: 200px" type="text" name="playername" value="" placeholder="Player Name" autocomplete="off">
-                <button type="submit" name="button" class="btn btn-success"  style="margin:15px"> Save </button>
+                <button type="submit" name="button" class="btn btn-success save"> Save </button>
 
               </div>
 
@@ -28,13 +28,13 @@
                   <h5>Player Details <i class="fa-regular fa-circle-question"></i></h5>
                   <hr class="mt-2 mb-4">
                   <div class="row pt-1">
-                    <div class="col-6 mb-3">
+                    <div class="col-6 mb-3 col-md-12">
                       <h6> <i class="fa-solid fa-envelope"></i> Email </h6>
-                      <input  style="width: 150px" type="text" name="playeremail" value="" placeholder="Email" autocomplete="off">
+                      <input  class="profileinp" type="text" name="playeremail" value="" placeholder="Email" autocomplete="off">
                     </div>
-                    <div class="col-6 mb-3">
+                    <div class="col-6 mb-3 col-md-12">
                       <h6> <i class="fa-solid fa-square-phone-flip"></i> Phone </h6>
-                      <input style="width: 150px" type="text" name="playernum" value="" placeholder="Phone No" autocomplete="off">
+                      <input class="profileinp" type="text" name="playernum" value="" placeholder="Phone No" autocomplete="off">
                     </div>
                   </div>
                   <!-- <h5>Game Score <i class="fa-regular fa-star"></i></h5>
