--- a/public/css/about.css
+++ b/public/css/about.css
@@ -25,16 +25,35 @@ body{
   margin-top: 40px;
   margin-bottom: 40px;
 }
-.colcontent{
+/* .colcontent{
   align-items: center;
-}
+} */
 
-@media only screen and (max-width: 480px){
-  .card{
+@media only screen and (max-width: 480px) {
+  .card {
     background-color: black;
-    width: 18rem;
+    width: 10rem;
     position: relative;
     left: 5%;
     right: 30%;
+  }
+  .card-body {
+    margin-top: 0;
+  }
+  .row {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  h1{
+    font-size: 30px;
+  }
+  h2{
+    font-size: 20px;
+  }
+  p, li, h4{
+    font-size: 15px;
+  }
+  h5{
+    font-size: 10px;
   }
 }
