--- a/public/css/alertcss/accCreated.css
+++ b/public/css/alertcss/accCreated.css
@@ -12,3 +12,21 @@ body{
   padding: 5%;
   margin-top: 10%;
 }
+@media only screen and (max-width: 480px){
+h2{
+  font-size: 30px;
+}
+p{
+  font-size: 20px;
+}
+.container{
+    box-shadow: 4px 4px 20px 8px black;
+  width: 80%;
+  text-align: center;
+  background-color: white;
+  border: 2px solid black;
+  border-radius: 25px;;
+  padding: 5%;
+  margin-top: 10%;
+}
+}
