--- a/public/css/alertcss/userErr.css
+++ b/public/css/alertcss/userErr.css
@@ -3,7 +3,7 @@ body{
   background-color: #ff5c5c;
 }
 .container{
-  box-shadow: 4px 4px 20px 8px black;  
+  box-shadow: 4px 4px 20px 8px black;
   width: 36%;
   text-align: center;
   background-color: white;
@@ -11,4 +11,22 @@ body{
   border-radius: 25px;;
   padding: 5%;
   margin-top: 10%;
+}
+@media only screen and (max-width: 480px){
+h2{
+  font-size: 30px;
+}
+p{
+  font-size: 20px;
+}
+.container{
+    box-shadow: 4px 4px 20px 8px black;
+  width: 80%;
+  text-align: center;
+  background-color: white;
+  border: 2px solid black;
+  border-radius: 25px;;
+  padding: 5%;
+  margin-top: 10%;
+}
 }
