--- a/public/css/email.css
+++ b/public/css/email.css
@@ -35,3 +35,23 @@ input:focus {
   border-color: dodgerblue;
   box-shadow: 0 0 8px dodgerblue;
 }
+
+@media only screen and (max-width: 480px){
+  input {
+    padding: 5px;
+    margin: 10px;
+    font-size: 15px;
+    border: 1px solid #000;
+    border-radius: 4px;
+  }
+.container{
+    box-shadow: 4px 4px 20px 8px black;
+  width: 90%;
+  text-align: center;
+  background-color: white;
+  border: 2px solid black;
+  border-radius: 25px;;
+  padding: 10%;
+  margin-top: 10%;
+}
+}
