--- a/public/css/gamescss/card.css
+++ b/public/css/gamescss/card.css
@@ -28,17 +28,17 @@ font-size: 2em;
 button {
 -moz-border-radius: 5px;
 -webkit-border-radius: 5px;
-border-radius: 5px;
+border-radius: 10px;
 -khtml-border-radius: 5px;
 background: #82d2e5;
 color: #fff;
 border: solid 1px #fff;
 text-decoration: none;
 cursor: pointer;
-font-size: 1.2em;
-padding: 18px 10px;
-width: 180px;
-margin: 10px;
+font-size: 1.5em;
+padding: 5px 10px;
+width: 100px;
+margin: 5px 10px;;
 outline: none;
 }
 button:hover {
@@ -58,7 +58,7 @@ content: "";
 display: table;
 clear: both;
 }
-[data-view="card"] {
+[data-view="card"] {                  /*  CARD SIZE*/
 transform: rotateY(180deg);
 width: 160px;
 height: 240px;
@@ -110,4 +110,67 @@ background-size: contain;
 .correct[data-item="css"], .flipped[data-item="css"] {
 background: url("/images/card_img/c5.jpg") left center no-repeat #fff;
 background-size: contain;
+}
+
+@media only screen and (max-width: 480px) {
+  body {
+    font-size: 16px;
+  }
+
+  h1 {
+    font-size: 2em;
+  }
+
+  h3 {
+    font-size: 1.2em;
+  }
+
+  #seconds,
+  #tens {
+    font-size: 1.5em;
+  }
+
+  #semicolon {
+    font-size: 2em;
+  }
+
+  button {
+    position: absolute;
+    top:52.5%;
+    right: 36.5%;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 10px;
+  -khtml-border-radius: 5px;
+  background: #82d2e5;
+  color: #000;
+  border: solid 1px #000;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 1em;
+  padding: 5px;
+  width: 80px;
+  margin: 25px 10px;;
+  outline: none;
+  }
+  #container {
+    width: 100%;
+    margin: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  [data-view="card"] {
+  transform: rotateY(180deg);
+  width: 50px;
+  height: 100px;
+  border: solid 1px #d3cece;
+  border-radius: 5px;
+  float: left;
+  margin: 10px;
+  cursor: pointer;
+  background: linear-gradient(135deg, #f3f3f3 22px, #fff 22px, #fff 24px, transparent 24px, transparent 67px, #fff 67px, #fff 69px, transparent 69px), linear-gradient(225deg, #f3f3f3 22px, #fff 22px, #fff 24px, transparent 24px, transparent 67px, #fff 67px, #fff 69px, transparent 69px) 0 64px;
+  background-color: #f3f3f3;
+  background-size: 64px 128px;
+  }
 }
