--- a/public/css/gamescss/flappybird.css
+++ b/public/css/gamescss/flappybird.css
@@ -12,7 +12,8 @@ html {
 
 body {
   background-color: #222;
-  font-family: "Press Start 2P", cursive;
+  text-align: center;
+  font-family: 'Righteous', cursive;
   width: 100%;
   height: 100%;
   display: grid;
@@ -24,7 +25,7 @@ body {
   height: 500px;
   margin: 0 auto;
   position: relative;
-  border: 4px solid #000;
+  border: 1px solid #000;
 }
 
 #info_box {
@@ -60,7 +61,7 @@ body {
   min-width: 340px;
   transform: translate(-50%, -50%);
   z-index: 1;
-  font-family: "Press Start 2P", cursive;
+  font-family: 'Righteous', cursive;
   font-size: 16px;
   color: #000;
 }
@@ -75,7 +76,7 @@ body {
   border: 4px solid #fff;
   background-color: #eb564b;
   cursor: pointer;
-  font-family: "Press Start 2P", cursive;
+  font-family: 'Righteous', cursive;
   font-size: 16px;
   color: #fff;
   text-align: center;
@@ -92,7 +93,7 @@ body {
   border: 4px solid #fff;
   background-color: #eb564b;
   cursor: pointer;
-  font-family: "Press Start 2P", cursive;
+  font-family: 'Righteous', cursive;
   font-size: 16px;
   color: #fff;
   text-align: center;
@@ -106,30 +107,31 @@ body {
   font-size: 30px;
   z-index: 1;
   cursor: pointer;
-  font-family: "Press Start 2P", cursive;
+  font-family: 'Righteous', cursive;
   font-size: 24px;
   color: #fff;
   border: 4px solid #fff;
   background-color: #eb564b;
   padding: 6px 8px 4px 10px;
 }
-
+/* game background */
 #game {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #4da6ff;
+  background-color: #00CCFF;
   overflow: hidden;
 }
-
+/* poles */
 #block {
   width: 60px;
   height: 500px;
-  background: #8fde5d;
-  border-left: 4px solid #000;
-  border-right: 4px solid #000;
+  background: linear-gradient(90deg, #f8ff00 0%, #3ad59f 100%);
+  border-left: 0px solid #000;
+  border-right: 0px solid #000;
+  border-radius: 10%;
   position: relative;
   left: 400px;
 }
@@ -146,18 +148,18 @@ body {
     left: -60px;
   }
 }
-
+/* gape between poles */
 #hole {
   width: 60px;
   height: 160px;
-  background-color: #4da6ff;
+  background-color: #00CCFF;
   position: relative;
   left: 400px;
   top: -500px;
-  border-top: 4px solid #000;
-  border-bottom: 4px solid #000;
+  border-top: 1px solid #000;
+  border-bottom: 1px solid #000;
 }
-
+/* bird body */
 #sprite {
   width: 30px;
   height: 30px;
@@ -168,7 +170,7 @@ body {
   top: 100px;
   left: 28px;
 }
-
+/* bird wing */
 #sprite::before {
   content: "";
   position: absolute;
@@ -181,7 +183,7 @@ body {
   box-shadow: 0 0 0 4px #000;
   transform: rotate(-4deg);
 }
-
+/* bird mouth */
 #sprite::after {
   content: "";
   position: absolute;
@@ -199,4 +201,85 @@ body {
 
 .final_score {
   font-size: 32px;
+}
+
+@media only screen and (max-width: 480px){
+  #container {
+    width: 350px;
+    height: 500px;
+    margin: 0 auto;
+    position: relative;
+    border: 1px solid #000;
+  }
+  #info_box {
+    width: 80%;
+    height: 80%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    text-transform: uppercase;
+  }
+
+  #info_title {
+    position: absolute;
+    top: 15%;
+    right: 5%;
+    z-index: 1;
+    font-size: 30px;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: black;
+    text-shadow: 3px 3px 1px #000;
+    background-color: #ffe478;
+    background-image: linear-gradient(45deg, #ffe478, #eb564b);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+  }
+
+  #info_instructions {
+    position: absolute;
+    top: 90%;
+    left: 62%;
+    min-width: 340px;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    font-family: 'Righteous', cursive;
+    font-size: 14px;
+    color: #000;
+  }
+  #info_start {
+    position: absolute;
+    top: 50%;
+    left: 62%;
+    min-width: 260px;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    border: 4px solid #fff;
+    background-color: #eb564b;
+    cursor: pointer;
+    font-family: 'Righteous', cursive;
+    font-size: 14px;
+    color: #fff;
+    text-align: center;
+    padding: 12px;
+  }
+
+  #info_end {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    min-width: 260px;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    border: 4px solid #fff;
+    background-color: #eb564b;
+    cursor: pointer;
+    font-family: 'Righteous', cursive;
+    font-size: 16px;
+    color: #fff;
+    text-align: center;
+    padding: 12px;
+  }
 }
