--- a/public/css/gamescss/guesscolor.css
+++ b/public/css/gamescss/guesscolor.css
@@ -57,7 +57,7 @@ h1 {
 button {
 	outline: none;
 	color: #2C8E99;
-	font-family: "Raleway", Sans-serif;
+	font-family: 'Righteous', cursive;
 	text-transform: uppercase;
 	font-size: 1.5em;
 	background-color: white;
@@ -85,4 +85,26 @@ button:hover {
 
 * {
 	border: 0px solid red;
+}
+
+@media only screen and (max-width: 480px) {
+	h1 {
+		color: white;
+		background-color: #2C8E99;
+		font-size: 2em;
+		text-align: center;
+		text-transform: uppercase;
+		margin: 0;
+		padding: 10px 0;
+	}
+	#stripe {
+		background: white;
+		height: 40px;
+		text-align: center;
+		font-size: 10px;
+		color: black;
+	}
+  #container {
+    padding-top: 10px;
+  }
 }
