--- a/public/css/gamescss/snake.css
+++ b/public/css/gamescss/snake.css
@@ -86,11 +86,26 @@ h2 {
 #replay svg {
   margin-right: 8px;
 }
-
+h1{
+  position: absolute;
+  visibility: hidden;
+  text-align: center;
+  color: white;
+}
 /* phone view */
-@media (max-width: 600px) {
+ /* @media only screen and (max-width: 480px) {
+   canvas {
+     background-color: #212A3E;
+     border: 4px solid white;
+   	border-radius: 20%;
+   	width: 100%;
+   	height: 100%;
+   }
   #replay {
-    margin-bottom: 20px;
+    position: absolute;
+    top: 20px;
+    right: 120px;
+    font-size: 20px;
   }
   #replay,
   h2 {
@@ -101,18 +116,22 @@ h2 {
     margin-bottom: 20px;
   }
   #score {
+    font-size: 15px;
     margin-top: 0;
     margin-left: 20px;
   }
   .container {
     flex-flow: column wrap;
   }
-}
-
-/* .wrapper {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 20px;
 } */
+
+@media only screen and (max-width: 480px){
+  .container{
+    visibility: hidden;
+  }
+  h1{
+    visibility: visible;
+    text-align: center;
+    color: white;
+  }
+}
