--- a/public/css/home.css
+++ b/public/css/home.css
@@ -49,7 +49,7 @@ nav{
 }
 
 
-@media (max-width:900px){
+@media only screen and (max-width: 480px){
   h1{
     font-size: 30px;
   }
@@ -65,5 +65,8 @@ nav{
     position: relative;
     bottom:10px;
     right:0px;
+  }
+  #topimg {
+  width: 100%;
   }
 }
