--- a/views/about.ejs
+++ b/views/about.ejs
@@ -38,7 +38,7 @@
    <div class="container text-center">
      <div class="row mt-3">
 
-       <div class="col-6 colcontent">
+       <div class="col-6">
          <div class="card">
            <img src="images/about_img/pb.jpg" class="proimg">
            <div class="card-body">
