--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -14,7 +14,7 @@
       </div>
       <div class="input-group" id="inputdiv">
         <span class="input-group-text"> <img src="images/signin_signup_img/k.png" height="20" width="20"> </span>
-          <input type="password" class="form-control" placeholder="Create Password" name="newuserpswd" >
+          <input type="password" class="form-control" placeholder="Password" name="newuserpswd" >
       </div>
 
   <button id="loginbtn" class="btn btn-success" type="submit" name="button" value="usersignup"> SignUp </button>
