--- a/views/home.ejs
+++ b/views/home.ejs
@@ -38,7 +38,7 @@
 
         <div class="carousel-item active">
           <div class="row">
-            <div id="col1" class="col-lg-6">
+            <div id="col1" class="col-lg-6 col11">
               <h1>Gallery of the Gamer</h1>
               <h2>Get your game discovered</h2>
 
@@ -62,7 +62,7 @@
             <div class="col-lg-6">
               <img id="topimg" src="images/home_img/h2.png">
             </div>
-            <div id="col1" class="col-lg-6">
+            <div id="col1" class="col-lg-6 col22">
               <h1 class="slide2">Take your game to the next level</h1>
             </div>
           </div>
@@ -70,7 +70,7 @@
 
         <div class="carousel-item">
           <div class="row">
-            <div id="col1" class="col-lg-6">
+            <div id="col1" class="col-lg-6 col22">
               <h1>Evolve your gaming experience</h1>
             </div>
             <div class="col-lg-6">
@@ -78,13 +78,13 @@
             </div>
           </div>
         </div>
-        
+
         <div class="carousel-item">
           <div class="row">
             <div class="col-lg-6">
               <img id="topimg" src="images/home_img/h4.png">
             </div>
-            <div id="col1" class="col-lg-6">
+            <div id="col1" class="col-lg-6 col22">
               <h1>Play for fun and live the Adventure</h1>
             </div>
           </div>
