--- a/views/parallax.ejs
+++ b/views/parallax.ejs
@@ -57,7 +57,7 @@
           <div class="startedpp">
             <h1>We let the world play</h1>
             <h4>Because play is how we learn.That’s why we’re creating the ultimate online playground.Free and open to all.Wanna play?</h4>
-            <button type="submit" class="btn btn-light btn-lg fa-beat" onclick="window.location.href='#div_1'">
+            <button type="submit" class="btn btn-light btn-lg fa-beat" onclick="window.location.href='#div_1'" ontouchstart="window.location.href='#div_1'">
             <i class='fas fa-angle-double-down'></i> lets started!
             </button>
           </div>
@@ -69,7 +69,7 @@
          </div>
          <div class="started">
            <h3>A game is an opportunity to focus our energy <br> with relentless optimism,at something <br> we're good at (or getting better at) and enjoy.".</h3>
-           <button type="submit" class="btn btn-light btn-lg fa-beat" onclick="window.location.href='#parallax_2'">
+           <button type="submit" class="btn btn-light btn-lg fa-beat" onclick="window.location.href='#parallax_2'" ontouchstart="window.location.href='#parallax_2'">
            <i class='fas fa-angle-double-down'></i> Roll!
            </button>
          </div>
@@ -81,7 +81,7 @@
           </div>
           <div class="startedp">
             <h3>Winning isn't everything,<br> but it beats anything that comes in second</h3>
-            <button type="submit" class="btn btn-light btn-lg fa-beat" onclick="window.location.href='#div_2'">
+            <button type="submit" class="btn btn-light btn-lg fa-beat" onclick="window.location.href='#div_2'" ontouchstart="window.location.href='#div_2'">
             <i class='fas fa-angle-double-down'></i> What's next..?
             </button>
           </div>
@@ -93,7 +93,7 @@
           </div>
           <div class="started">
             <h3>Good games are not just a source of entertainment, <br> they're also a way to challenge <br> ourselves and improve.</h3>
-            <button type="submit" class="btn btn-light btn-lg fa-beat" onclick="window.location.href='#parallax_3'">
+            <button type="submit" class="btn btn-light btn-lg fa-beat" onclick="window.location.href='#parallax_3'" ontouchstart="window.location.href='#parallax_3'">
             <i class='fas fa-angle-double-down'></i> Continue roll..
             </button>
           </div>
@@ -105,7 +105,7 @@
            </div>
            <div class="startedb">
              <h2>Games are the only force in the known universe <br> that can get people to take actions against their self-interest, in a predictable way, without using force.</h2>
-             <button type="submit" class="btn btn-light btn-lg fa-beat" onclick="window.location.href='#footersection'">
+             <button type="submit" class="btn btn-light btn-lg fa-beat" onclick="window.location.href='#footersection'" ontouchstart="window.location.href='#footersection'">
              <i class='fas fa-angle-double-down'></i> Know more
              </button>
            </div>
