--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,34 +1,33 @@
-body {
+body{
   font-family: 'Righteous', cursive;
   background-color: #5BC0F8;
   font-size: 25px;
 }
-
-.card {
+.card{
   background-color: black;
   width: 18rem;
   position: relative;
   left: 25%;
   right: 25%;
 }
-
-.card-body {
+.card-body{
   background-color: white;
   margin-top: 0.5%;
 }
-
-.proimg {
+.proimg{
   position: relative;
   width: 50%;
   height: 100%;
-  top: 10%;
-  left: 25%;
+  top:10%;
+  left:25%;
 }
-
-.row {
+.row{
   margin-top: 40px;
   margin-bottom: 40px;
 }
+/* .colcontent{
+  align-items: center;
+} */
 
 @media only screen and (max-width: 480px) {
   .card {
@@ -45,18 +44,16 @@ body {
     margin-top: 20px;
     margin-bottom: 20px;
   }
-  h1 {
+  h1{
     font-size: 30px;
   }
-  h2 {
+  h2{
     font-size: 20px;
   }
-  p,
-  li,
-  h4 {
+  p, li, h4{
     font-size: 15px;
   }
-  h5 {
+  h5{
     font-size: 10px;
   }
 }
