--- a/views/about.ejs
+++ b/views/about.ejs
@@ -40,11 +40,11 @@
 
        <div class="col-6">
          <div class="card">
-           <img src="images/about_img/pb.jpg" class="proimg">
+           <!-- <img src="images/about_img/pb.JPG" class="proimg"> -->
            <div class="card-body">
              <p>
                <h4>Frontend developer</h4>
-                <h5>Pratiksha bhatt</h5>
+                <h5>Om bahuguna</h5>
              </p>
            </div>
          </div>
@@ -52,11 +52,11 @@
 
        <div class="col-6">
          <div class="card">
-           <img src="images/about_img/ak.jpg" class="proimg">
+           <!-- <img src="images/about_img/ak.JPG" class="proimg"> -->
            <div class="card-body">
              <p>
                <h4>Backend developer</h4>
-                <h5>Ankita kundliya</h5>
+                <h5>Shivam gusain</h5>
              </p>
            </div>
          </div>
