--- a/views/parallax.ejs
+++ b/views/parallax.ejs
@@ -171,7 +171,7 @@
                     <i class="fas fa-home me-3"></i> 246149 Uttarakhand, INDIA
                   </p>
                   <p>
-                    <i class="fas fa-envelope me-3"></i>ankita2kundliya@gamil.com
+                    <i class="fas fa-envelope me-3"></i>ombahuguna7@gamil.com
                   </p>
                 </div>
 
