--- a/views/parallax.ejs
+++ b/views/parallax.ejs
@@ -154,15 +154,15 @@
                 <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-md-0 mb-4">
                   <h6 class="text-uppercase fw-bold mb-4"> Social links </h6>
                   <p>
-                    <a class="nav-link" href="https://www.linkedin.com/in/ankita-kundliya-5ba21120b/">
+                    <a class="nav-link" href="https://www.linkedin.com/in/om-bahuguna-6044252bb/">
                       <i class="fa-brands fa-linkedin me-3"></i>  Linkedin
                     </a>
                   </p>
-                  <p>
+                  <!-- <p>
                     <a class="nav-link" href="https://github.com/ankita9690">
                     <i class="fa-brands fa-github me-3"></i>  Github
                     </a>
-                  </p>
+                  </p> -->
                 </div>
 
                 <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-md-0 mb-4">
@@ -180,7 +180,7 @@
           </section>
 
           <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-            © 2023 Copyright
+            <!-- © 2023 Copyright -->
             <a class="backTotop" href="#topsection"><i class="fa-solid fa-circle-arrow-up fa-beat fa-2xl"></i></a>
           </div>
 
