Describe your changes herejkjj

--- a/views/parallax.ejs
+++ b/views/parallax.ejs
@@ -154,15 +154,15 @@
                 <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-md-0 mb-4">
                   <h6 class="text-uppercase fw-bold mb-4"> Social links </h6>
                   <p>
-                    <a class="nav-link" href="https://www.linkedin.com/in/om-bahuguna-6044252bb/">
+                    <a class="nav-link" href="https://www.linkedin.com/in/ankita-kundliya-5ba21120b/">
                       <i class="fa-brands fa-linkedin me-3"></i>  Linkedin
                     </a>
                   </p>
-                  <!-- <p>
+                  <p>
                     <a class="nav-link" href="https://github.com/ankita9690">
                     <i class="fa-brands fa-github me-3"></i>  Github
                     </a>
-                  </p> -->
+                  </p>
                 </div>
 
                 <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-md-0 mb-4">
@@ -171,7 +171,7 @@
                     <i class="fas fa-home me-3"></i> 246149 Uttarakhand, INDIA
                   </p>
                   <p>
-                    <i class="fas fa-envelope me-3"></i>ombahuguna7@gamil.com
+                    <i class="fas fa-envelope me-3"></i>ankita2kundliya@gamil.com
                   </p>
                 </div>
 
