--- a/views/about.ejs
+++ b/views/about.ejs
@@ -44,7 +44,7 @@
            <div class="card-body">
              <p>
                <h4>Frontend developer</h4>
-                <h5>Om bahuguna</h5>
+                <h5>Pratiksha bhatt</h5>
              </p>
            </div>
          </div>
@@ -56,7 +56,7 @@
            <div class="card-body">
              <p>
                <h4>Backend developer</h4>
-                <h5>Shivam gusain</h5>
+                <h5>ankita kundliya</h5>
              </p>
            </div>
          </div>
