--- a/views/about.ejs
+++ b/views/about.ejs
@@ -56,7 +56,7 @@
            <div class="card-body">
              <p>
                <h4>Backend developer</h4>
-                <h5>ankita kundliya</h5>
+                <h5>Ankita kundliya</h5>
              </p>
            </div>
          </div>
